# maxi-translator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: debug.h.39D2CA759ABF80E7.idx  lexical.cpp.5A510C17D38D0E14.idx  lexical.h.82213A399D44F969.idx  main.cpp.3C5A51C52367AF98.idx  semantic.h.780A1CA91127F97F.idx  syntax.cpp.74379BFB5EA6A3DB.idx  syntax.h.97C78789FAAFF463.idx  trie.h.AC1814164E1D5119.idx
analyzers/: lexical.h  syntax.h
analyzers/lexical/: CMakeLists.txt  lexical.cpp  lexical.h
analyzers/semantic/: CMakeLists.txt  semantic.cpp  semantic.h  tid.cpp  tid.h
analyzers/syntax/: CMakeLists.txt  syntax.cpp  syntax.h
static/: grammar.bnf  reserved_lexem.txt  test.txt
utils/: debug.h  trie.h
